--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,11 @@
     <string name="app_name">Android_UI</string>
 
     <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="my_apps">My NanoDegree Apps!</string>
+    <string name="spotify_steamer">Spotify Streamer</string>
+    <string name="scores_app">Scores App</string>
+    <string name="library_app">Library App</string>
+    <string name="build_it_bigger">Build it Bigger</string>
+    <string name="xyz_reader">XYZ Reader</string>
+    <string name="capstone">CAPSTONE: MY OWN APP</string>
 </resources>
